--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.9.14"
+    "jsonwebtoken": "^9.0.2"
   }
 }
